@@ -20,6 +20,7 @@ require_once ('include/functions_workunits.php');
 global $config;
 
 $get_events = (bool) get_parameter ('get_events');
+$get_holidays = (bool) get_parameter ('get_holidays');
 
 if ($get_events) {
 
@@ -38,6 +39,23 @@ if ($get_events) {
 	
 	echo json_encode($events_result);
 	
+	return;
+}
+
+if ($get_holidays) {
+	global $config;
+
+	$start_date = get_parameter("start_date");
+	$end_date = get_parameter("end_date");
+
+	$users = get_user_visible_users ($config["id_user"]);
+
+	$users_ids = array_keys($users);	
+
+	$holidays = calendar_get_users_holidays_date_range($start_date, $end_date, $users_ids);
+
+	echo json_encode($holidays);
+
 	return;
 }
 
